--- a/client/src/components/rightbar/Rightbar.module.css
+++ b/client/src/components/rightbar/Rightbar.module.css
@@ -82,5 +82,21 @@
   border-radius: 5px;
 }
 
-.rightbarFollowingName {
+.rightbarFollowButton {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.rightbarFollowButton:focus {
+  outline: none;
 }
